--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h3 style=color:blue;> Types of <emp>CSS </emp> </h3>
         <p><ul>
             <li style=color:green;>In line styling</li>
-            <li style=color:purple;>Internal CSS  styling</li>
-            <li style=color:gold;>External CSS styling</li>
+            <li style=color:purple;>Internal CSS  </li>
+            <li style=color:gold;>External CSS </li>
         </ul></p>
     </div>
     <div>
@@ -44,7 +44,9 @@
     </form>
     <div>
         <br>
-      <button type="button"><a href="./index2.html">Next Page</a><button>
+      <button type="button"><a href="./index2.html">Page 2</a></button>
+      <button type="button"><a href="./index3.html">Page 3</a></button>
+
     </div>
 
 </body>
