--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,8 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur nihil, alias cumque iste quidem tempora repudiandae dolorem ea aut delectus provident quibusdam velit quo dicta vel aspernatur! Ipsam, natus consequatur.
         Illo asperiores distinctio blanditiis unde recusandae? Aut beatae ipsam ut ipsa, quibusdam ipsum suscipit. Odit, veniam. Sequi consequatur voluptas modi saepe, omnis exercitationem debitis, beatae in eligendi quas ipsam aliquam.</p>
     <div>
-        <button type="button"><a href="./index.html">Previous Page</a><button>
-        <button type="button"><a href="./index3.html">Next Page</a><button>
+        <button type="button"><a href="./index.html">Page 1</a></button>
+        <button type="button"><a href="./index3.html">Page 3</a></button>
       </div>
 </body>
 </html>
