--- a/index3.html
+++ b/index3.html
@@ -21,15 +21,18 @@
             <option name= select-role id="role" value="Indecisive">Indecisive</option>
             <option name= select-role id="role" value="Just Viewing">Just Viewing</option>
             </select>  
-    <div>
+    </div>
+    <form>
         <br>
         <label for="message">Any Message for Me?</label> <br>
-        <textarea name="message" value="" cols ="20" rows="10" value="" placeholder="Please enter your message..." ></textarea>
+        <textarea name="message" value="" cols ="20" rows="10" value="" placeholder="Please enter your message..." ></textarea><br>
+        <input type="submit">
+    </form>
+    <br>
+     <div>
+        <button><a href="./index.html"> Page 1</a></button>
+        <button><a href="./index2.html">Page 2</a></button>
+
     </div>
-    <button type="submit">Submit</button>
-    <br>
-    <br>
-        <button type="button"><a href="./index.html">First Page</a><button>
-      </div>
 </body>
 </html>
