--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to CSS</title>
    
-<body>
+<body style="background-color: aquamarine;">
     <div>
         <h1 style=color:red;  ><i>In line CSS styling.</i></h1> 
         <p> Watchout for <strong> tags</strong> that potray Inline styling</p> 
     </div>
     <div>
-        <h3 style=color:pink;>Today i learnt about <b>CSS </b> which means cascading styling sheet</h3>
+        <h3 style="color:pink; background-color: blueviolet;">Today i learnt about <b>CSS </b> which means cascading styling sheet</h3>
         <p><del>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident hic, nihil laboriosam natus eligendi, nam molestias porro quas esse, voluptates repellat ex quae magnam cum obcaecati sed. Ad, laborum quidem?</del></p>
     </div>
     <div>
