--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to CSS</title>
     <style>
-        p{ color:hotpink;} h3{ background-color: orange;} h4{ background-color: olive;}
+        p{ color:hotpink;} h3{ background-color: orange;} h4{ background-color: rgb(207, 207, 87);}
     </style>
 </head>
 <body>
