--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to CSS</title>
    
-<body style="background-color: aquamarine;">
+<body style="background-color: powderblue;">
     <div>
-        <h1 style=color:red;  ><i>In line CSS styling.</i></h1> 
+        <h1 style=color:red; ><i>In line CSS styling &#128540;</i></h1> 
         <p> Watchout for <strong> tags</strong> that potray Inline styling</p> 
     </div>
     <div>
