--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to CSS</title>
     <style>
-        p{ color:hotpink;} h3{ background-color: orange;} h4{ background-color: rgb(207, 207, 87);}
+       body{background-color: skyblue} p{ color:grey;} h3{ background-color: orange;} h4{ background-color: rgb(207, 207, 87);}
     </style>
 </head>
 <body>
@@ -16,10 +16,6 @@
     </div>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nisi amet illum nulla? Fugiat eius praesentium reiciendis blanditiis mollitia debitis inventore consectetur. Quod commodi pariatur optio doloribus debitis repellendus voluptatibus magni expedita in dolore corporis quas quam fuga dolor, ducimus, consequuntur porro qui numquam iusto a officiis molestias corrupti nihil voluptatum! Laboriosam sit quae iste, voluptatibus sunt incidunt voluptas id! Alias repellat perspiciatis necessitatibus vel sit ipsum ipsam explicabo aspernatur tempore adipisci quo ut beatae error exercitationem, odio libero a commodi.</p>
-    </div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur nihil, alias cumque iste quidem tempora repudiandae dolorem ea aut delectus provident quibusdam velit quo dicta vel aspernatur! Ipsam, natus consequatur.
-        Illo asperiores distinctio blanditiis unde recusandae? Aut beatae ipsam ut ipsa, quibusdam ipsum suscipit. Odit, veniam. Sequi consequatur voluptas modi saepe, omnis exercitationem debitis, beatae in eligendi quas ipsam aliquam.</p>
-    <div>
         <button type="button"><a href="./index.html">Page 1</a></button>
         <button type="button"><a href="./index3.html">Page 3</a></button>
       </div>
